--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: rgba(31, 22, 51, 0.992);
 }
 
-.App-link {
-  color: #61dafb;
+.case{
+  border: 2px solid rgb(232, 232, 23);
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+h3{
+  text-align: center;
+  color: #fff;
+  font-size: 2em;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+hr{
+  width: 100%;
+  border: 1px solid rgb(232, 232, 23);
+}
+
+p{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  margin: 10px auto;
+  color:#fff;
+  font-size: 1.5em;
+}
+
+.sizeIcon{
+  font-size: 2em;
+}
+
+.load{
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+}
+
+@media only screen and (max-width: 600px) {
+  h3{
+    text-align: center;
+    color: #fff;
+    font-size: 1.8em;
+    margin-top: 5px;
+    margin-bottom: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  p{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    margin: 10px auto;
+    color:#fff;
+    font-size: 1.3em;
   }
 }
